# effiective_kernels

./: .gitignore  ARCHITECTURE.md  Makefile  QUICKSTART.md  README.md  USAGE_GUIDE.md  pyproject.toml  setup.py  stride_benchmark  stride_benchmark.cu  verify_structure.py
csrc/kernels/: gemm.cu  gemm_optimized.cu
efficient_kernels/: __init__.py
examples/: basic_gemm.py  benchmark_attention.py  gist_builder.py  gist_cache_demo.py  jit_example.py  profile_gemm_streamk.py  rope_attention.py
gist/: gist_mask.py  train.py
profiler_traces/: trace_fused_1024d_1024seq.json  trace_pytorch_1024d_1024seq.json
tests/: test_gemm.py
