[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "torch>=1.8.0",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "efficient_kernels"
version = "0.1.0"
description = "Custom CUDA kernels for PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Programming Language :: CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/yourusername/efficient_kernels"
Repository = "https://github.com/yourusername/efficient_kernels"

[tool.setuptools]
packages = ["efficient_kernels"]

[tool.setuptools.package-data]
"*" = ["*.cu", "*.cuh", "*.cpp", "*.h"]
